# bumble-rs

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md
bumble/: Cargo.toml
bumble-a2dp/: Cargo.toml
bumble-a2dp/src/: lib.rs  media.rs  profile.rs  sdp.rs  transport.rs
bumble-a2dp/tests/: codecs.rs  host_media.rs  l2cap_media.rs  media.rs  profile.rs  sdp.rs
bumble-at/: Cargo.toml
bumble-at/src/: lib.rs
bumble-at/tests/: acceptance.rs
bumble-att/: Cargo.toml
bumble-att/src/: lib.rs
bumble-att/tests/: acceptance.rs  complete_catalog.rs  signing.rs
bumble-audio/: Cargo.toml
bumble-audio/src/: lib.rs  sound_device.rs
bumble-audio/tests/: io.rs
bumble-avc/: Cargo.toml
bumble-avc/src/: lib.rs
bumble-avc/tests/: frames.rs
bumble-avctp/: Cargo.toml
bumble-avctp/src/: lib.rs
bumble-avctp/tests/: host_protocol.rs  protocol.rs
bumble-avdtp/: Cargo.toml
bumble-avdtp/src/: host.rs  l2cap.rs  lib.rs  session.rs
bumble-avdtp/tests/: acceptance.rs  host_binding.rs  l2cap_binding.rs  session.rs
bumble-avrcp/: Cargo.toml
bumble-avrcp/src/: command.rs  event.rs  lib.rs  response.rs  runtime.rs  sdp.rs
bumble-avrcp/tests/: commands.rs  events.rs  responses.rs  runtime.rs  sdp.rs
bumble-codecs/: Cargo.toml
bumble-codecs/src/: g722.rs  lc3.rs  lib.rs
bumble-codecs/tests/: codecs.rs  g722.rs  lc3.rs
bumble-controller/: Cargo.toml
bumble-controller/src/: command_surface.rs  lib.rs  ll.rs  lmp.rs
bumble-controller/tests/: acl_data_path.rs  classic.rs  command_surface.rs  configuration.rs  extended_advertising.rs  iso_data.rs  ll_flows.rs  lmp_codec.rs  power_modes.rs  queries.rs  scenario.rs  synchronous.rs
bumble-crypto/: Cargo.toml
bumble-crypto/src/: lib.rs
bumble-crypto/tests/: ecc.rs  vectors.rs
bumble-drivers/: Cargo.toml
bumble-drivers/src/: intel.rs  lib.rs  rtk.rs
bumble-drivers/tests/: intel.rs  rtk.rs  selection.rs
bumble-gatt/: Cargo.toml
bumble-gatt/src/: adapters.rs  client.rs  lib.rs
bumble-gatt/tests/: adapters.rs  client.rs  dynamic_values.rs  eatt_bearer_state.rs  end_to_end.rs  queued_writes.rs  rich_database.rs  signed_writes.rs
bumble-hci/: Cargo.toml
bumble-hci/src/: codes.rs  command.rs  event.rs  lib.rs  metadata.rs  metadata_tables.rs  packet.rs  return_parameters.rs
bumble-hci/tests/: acceptance.rs  acl_fragments.rs  controller_return_parameters.rs  generated_commands.rs  generated_events.rs  metadata.rs  vendor.rs
bumble-hci/tools/hcigen/: README.md  event_embed.json  extract.py  gen_commands.py  gen_events.py  gen_metadata.py  gen_surface.py  make_embed.py
bumble-hfp/: Cargo.toml
bumble-hfp/src/: audio.rs  lib.rs  sdp.rs
bumble-hfp/tests/: extended_control.rs  post_slc.rs  rfcomm_slc.rs  sdp.rs  slc.rs
bumble-hid/: Cargo.toml
bumble-hid/src/: l2cap.rs  lib.rs
bumble-hid/tests/: l2cap.rs  protocol.rs
bumble-host/: Cargo.toml
bumble-host/src/: configuration.rs  data_queue.rs  lib.rs
bumble-host/tests/: acl_fragmentation.rs  broadcast_iso.rs  channel_sounding.rs  cig_parameters.rs  classic_channels.rs  classic_ctkd.rs  classic_inquiry.rs  configured_classic_smp.rs  configured_l2cap.rs  connection_controls.rs  connection_features.rs  data_queue.rs  device_capabilities.rs  device_configuration.rs  device_events.rs  eatt.rs  gatt_over_host.rs  high_level_device.rs  iso_controls.rs  iso_data.rs  le_credit_channels.rs  peer_lookup.rs  periodic_advertising.rs  privacy.rs  remote_name.rs  smp_pairing.rs  smp_sc_pairing.rs  smp_session.rs  synchronous_audio.rs
bumble-l2cap/: Cargo.toml
bumble-l2cap/src/: classic.rs  ertm.rs  le_credit.rs  lib.rs
bumble-l2cap/tests/: acceptance.rs  classic_channels.rs  classic_ertm.rs  complete_signaling.rs  enhanced_credit_manager.rs  ertm.rs  information_signaling.rs  le_credit_channel.rs  le_credit_manager.rs
bumble-pandora/: Cargo.toml  build.rs
bumble-pandora/src/: config.rs  data_types.rs  host.rs  l2cap.rs  lib.rs  runtime.rs  security.rs
bumble-pandora/tests/: host_grpc.rs  l2cap_grpc.rs
bumble-profiles/: Cargo.toml
bumble-profiles/src/: aics.rs  ams.rs  ancs.rs  ascs.rs  asha.rs  bap.rs  bass.rs  battery_service.rs  cap.rs  csip.rs  device_information_service.rs  gap.rs  gatt_service.rs  gmap.rs  hap.rs  heart_rate_service.rs  le_audio.rs  lib.rs  mcp.rs  pacs.rs  pbp.rs  tmap.rs  vcs.rs  vocs.rs
bumble-profiles/tests/: apple_profiles.rs  ascs.rs  bass_cap.rs  foundational_services.rs  hap.rs  hearing_profiles.rs  le_audio_pacs.rs  media_control.rs  role_profiles.rs  volume_controls.rs
bumble-rfcomm/: Cargo.toml
bumble-rfcomm/src/: l2cap.rs  lib.rs  mux.rs
bumble-rfcomm/tests/: acceptance.rs  l2cap_binding.rs  session.rs
bumble-rtp/: Cargo.toml
bumble-rtp/src/: lib.rs
bumble-rtp/tests/: packets.rs
bumble-sdp/: Cargo.toml
bumble-sdp/src/: l2cap.rs  lib.rs  pdu.rs  service.rs
bumble-sdp/tests/: acceptance.rs  l2cap_binding.rs  service.rs
bumble-smp/: Cargo.toml
bumble-smp/src/: classic.rs  distribution.rs  lib.rs  manager.rs  pairing.rs  privacy.rs  sc_session.rs  security.rs  session.rs
bumble-smp/tests/: classic_ctkd.rs  key_distribution.rs  legacy_session.rs  manager.rs  pairing.rs  privacy.rs  sc_session.rs  security_request.rs
bumble-transport/: Cargo.toml  build.rs
bumble-transport/proto/: android_emulator.proto  netsim_common.proto  netsim_packet_streamer.proto  netsim_startup.proto
bumble-transport/src/: android_emulator.rs  android_netsim.rs  bridge.rs  command_channel.rs  common.rs  dispatch.rs  file.rs  hci_socket.rs  host.rs  lib.rs  pty.rs  serial.rs  snoop.rs  tcp.rs  udp.rs  unix.rs  usb.rs  vhci.rs  websocket.rs
bumble-transport/tests/: android_emulator.rs  android_netsim.rs  bridge.rs  command_channel.rs  hci_socket.rs  snoop.rs  specs.rs  transports.rs  usb.rs  vhci.rs  websocket.rs
bumble/src/: address.rs  advertising_data.rs  appearance.rs  class_of_device.rs  company_ids.rs  data_types.rs  keys.rs  lib.rs  types.rs  util.rs  uuid.rs  well_known_uuids.rs
bumble/tests/: acceptance.rs  key_store.rs
(+22 files in other folders)
