[package]
name = "bumble-a2dp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Rust port of google/bumble Advanced Audio Distribution Profile"

[dependencies]
bumble-avdtp = { path = "../bumble-avdtp" }
bumble-rtp = { path = "../bumble-rtp" }
bumble-l2cap = { path = "../bumble-l2cap" }
bumble = { path = "../bumble" }
bumble-sdp = { path = "../bumble-sdp" }
