[package]
name = "bumble-att"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Rust port of google/bumble ATT protocol PDU codec (slice 5)"

[dependencies]
bumble = { path = "../bumble" }
bumble-crypto = { path = "../bumble-crypto" }
