[package]
name = "bumble-controller"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Rust port of google/bumble software controller + virtual link (slice 3: LE advertising scenario)"

[dependencies]
bumble = { path = "../bumble" }
bumble-hci = { path = "../bumble-hci" }

[dev-dependencies]
# Used only by the ACL-data-path integration test to build/parse the payload
# that rides over the (layer-agnostic) ACL channel.
bumble-l2cap = { path = "../bumble-l2cap" }
bumble-att = { path = "../bumble-att" }
