[package]
name = "bumble-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Rust port of google/bumble SMP cryptographic toolbox (slice 6: e, AES-CMAC, c1, s1, f4/f5/f6, g2, h6/h7, ah)"

[dependencies]
aes = "0.8"
p256 = { version = "0.13", features = ["ecdh"] }
rand_core = { version = "0.6", features = ["getrandom"] }
