[package]
name = "bumble-drivers"
description = "Vendor controller firmware drivers for bumble-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
bumble-hci = { path = "../bumble-hci" }
