[package]
name = "bumble-gatt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Rust port of google/bumble GATT — a minimal ATT attribute server (slice 9)"

[dependencies]
bumble = { path = "../bumble" }
bumble-att = { path = "../bumble-att" }
bumble-crypto = { path = "../bumble-crypto" }

[dev-dependencies]
# The end-to-end test drives the server over the full stack.
bumble-hci = { path = "../bumble-hci" }
bumble-l2cap = { path = "../bumble-l2cap" }
bumble-controller = { path = "../bumble-controller" }
