[package]
name = "bumble-hci"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Rust port of google/bumble HCI packet codec (slice 2: framing + representative commands/events)"

[dependencies]
bumble = { path = "../bumble" }
