[package]
name = "bumble-hfp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Rust port of google/bumble Hands-Free Profile service-level connection"

[dependencies]
bumble-at = { path = "../bumble-at" }

[dev-dependencies]
bumble-l2cap = { path = "../bumble-l2cap" }
bumble-rfcomm = { path = "../bumble-rfcomm" }
