[package]
name = "bumble-hid"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Rust port of google/bumble Bluetooth HID profile"

[dependencies]
bumble-l2cap = { path = "../bumble-l2cap" }
