[package]
name = "bumble-host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Rust port of google/bumble host glue (slice 10: Device — ATT-over-L2CAP-over-ACL sequencing as a library)"

[dependencies]
bumble = { path = "../bumble" }
bumble-hci = { path = "../bumble-hci" }
bumble-l2cap = { path = "../bumble-l2cap" }
bumble-att = { path = "../bumble-att" }
bumble-gatt = { path = "../bumble-gatt" }
bumble-controller = { path = "../bumble-controller" }

[dev-dependencies]
# The SMP pairing integration test runs the handshake over the link.
bumble-smp = { path = "../bumble-smp" }
