[package]
name = "bumble-l2cap"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Rust port of google/bumble L2CAP frame codec (slice 4: PDU + signaling frames + FCS)"

[dependencies]
