[package]
name = "bumble-profiles"
description = "Bluetooth GATT profiles for bumble-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
bumble = { path = "../bumble" }
bumble-gatt = { path = "../bumble-gatt" }
bumble-crypto = { path = "../bumble-crypto" }
rand_core = { version = "0.6", features = ["getrandom"] }

[dev-dependencies]
bumble-att = { path = "../bumble-att" }
