[package]
name = "bumble-rfcomm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Rust port of google/bumble RFCOMM frame + MCC codec (slice 17)"

[dependencies]
bumble-l2cap = { path = "../bumble-l2cap" }
