[package]
name = "bumble-sdp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Rust port of google/bumble Service Discovery Protocol (SDP) codec (slice 16)"

[dependencies]
bumble = { path = "../bumble" }
