[package]
name = "bumble-smp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Rust port of google/bumble SMP — PDU codec + legacy pairing (slice 14, wiring in bumble-crypto)"

[dependencies]
bumble = { path = "../bumble" }
bumble-crypto = { path = "../bumble-crypto" }
