[package]
name = "bumble-transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "HCI packet framing and external transports for bumble-rs"

[dependencies]
bumble-hci = { path = "../bumble-hci" }
serialport = { version = "4.9.0", default-features = false }
tungstenite = { version = "0.30.0", features = ["rustls-tls-native-roots"] }
rusb = { version = "0.9.4", features = ["vendored"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.186"
