[package]
name = "bumble-transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "HCI packet framing and external transports for bumble-rs"

[dependencies]
bumble = { path = "../bumble" }
bumble-hci = { path = "../bumble-hci" }
bumble-smp = { path = "../bumble-smp" }
prost = "0.13.5"
serde_json = "1"
serialport = { version = "4.9.0", default-features = false }
tokio = { version = "1.45.1", features = ["macros", "rt", "sync"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
tonic = { version = "0.13.1", default-features = false, features = ["codegen", "prost", "router", "transport"] }
tungstenite = { version = "0.30.0", features = ["rustls-tls-native-roots"] }
rusb = { version = "0.9.4", features = ["vendored"] }

[build-dependencies]
protoc-bin-vendored = "3.2.0"
tonic-build = "0.13.1"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.186"
