[package]
name = "bumble"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Rust port of google/bumble core Bluetooth primitives (slice 1: core types & advertising data)"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
